--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <li class="header__lang-link"><a class="header__lang-link-content" href="">En</a></li>
       </ul>
     </header>
-    <section class="lead"></section>
+    <section class="lead">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <img src="./images/lead__polka.jpg" alt="Полка" class="lead__image">
+      <p class="lead__caption">ваша полка — верхняя</p>
+    </section>
     <section class="intro"></section>
     <section class="photo-grid"></section>
     <section class="places"></section>
