--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
       <img src="./images/lead__polka.jpg" alt="Полка" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
-    <section class="intro"></section>
+    <section class="intro">
+      <article class="intro__article">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li><p class="intro__list-item-content">Часовых поясов 11</p></li>
+        <li><p class="intro__list-item-content">Объектов природного наследия ЮНЕСКО 12</p></li>
+        <li><p class="intro__list-item-content">Объектов культурного наследия ЮНЕСКО 16</p></li>
+        <li><p class="intro__list-item-content">Природных заповедников 105</p></li>
+        <li><p class="intro__list-item-content">Аэропортов 241</p></li>
+      </ul>
+      </article>
+    </section>
     <section class="photo-grid"></section>
     <section class="places"></section>
     <section class="cover"></section>
