--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
         </div>
       </article>
     </section>
-    <section class="cover"></section>
+    <section class="cover">
+      <div class="cover__overlay">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+      </div>
+    </section>
     <footer class="footer"></footer>
   </div>
 </body>
