--- a/index.html
+++ b/index.html
@@ -130,7 +130,16 @@
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
       </a>
     </section>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <ul class="footer__links">
+        <li class="footer__link"><a href="https://yandex.ru/maps" class="footer__link-content">Карты</a></li>
+        <li class="footer__link"><a href="https://yandex.ru/pogoda" class="footer__link-content">Погода</a></li>
+        <li class="footer__link"><a href="https://rasp.yandex.ru" class="footer__link-content">Расписание</a></li>
+        <li class="footer__link"><a href="https://calendar.yandex.ru" class="footer__link-content">Календарь</a></li>
+        <li class="footer__link"><a href="https://travel.yandex.ru" class="footer__link-content">Путешествия</a></li>
+      </ul>
+      <p class="footer__copyright">© 2020. Евгений Чернышов</p>
+    </footer>
   </div>
 </body>
 </html>
