added lang menu nav

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <path d="M154.203 35.0004V27.9095H149.771V41.0004H154.203L157.851 33.8754V41.0004H162.283V27.9095H157.851L154.203 35.0004Z" fill="white"/>
         <path d="M172.212 41.0004H176.575V27.9095H170.439C166.663 27.9095 164.277 29.8186 164.303 32.4777C164.286 33.9692 165.18 35.205 166.749 35.9379L164.166 41.0004H168.496L170.703 36.6709H172.212V41.0004ZM172.212 33.8414H170.541C169.288 33.8414 168.709 33.2277 168.734 32.6482C168.709 32.1027 169.254 31.4209 170.439 31.4209H172.212V33.8414Z" fill="white"/>
       </svg>
-      <ul class="header__lang-links">
+      <nav><ul class="header__lang-links">
         <li class="header__lang-link"><a class="header__lang-link-content header__lang-link-content_active" href="">Ru</a></li>
         <li class="header__lang-link"><a class="header__lang-link-content" href="">En</a></li>
-      </ul>
+      </ul></nav>
     </header>
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
@@ -44,18 +44,18 @@
     </section>
     <section class="photo-grid">
       <ul class="photo-grid__grid">
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="поезд"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="горы Кавказа"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="туман"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="Сочи"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="колесо фургона на льду озера Байкал"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="берег озера Байкал"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="гора Эльбрус"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="дорожный знак"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="пейзаж Камчатки"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="пейзаж Камчатки"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="берег озера Байкал"></li>
-        <li class="photo-grid__item"><img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="природный парк Ергаки"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="поезд"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="горы Кавказа"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="туман"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="Сочи"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="колесо фургона на льду озера Байкал"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="берег озера Байкал"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="гора Эльбрус"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="дорожный знак"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="пейзаж Камчатки"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="пейзаж Камчатки"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="берег озера Байкал"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="природный парк Ергаки"></li>
       </ul>
     </section>
     <section class="places">
